# Euler

./: CMakeLists.txt
btree/: btree.cpp  btree.hpp  tests.cpp
euler/: CMakeLists.txt  euler.cpp  euler.hpp
pro17Tests/: pro17Tests.m
pro18Tests/: pro18Tests.m
pro19Tests/: pro19Tests.m
problem 17/: class17.cpp  class17.hpp  main.cpp  tests.cpp
problem 18/: class18.cpp  class18.hpp  main.cpp  tests.cpp
problem 19/: main.cpp  tests.cpp  utils.cpp  utils.hpp
problem20/: CMakeLists.txt  main.cpp
problem21/: CMakeLists.txt  main.cpp  main.cpp~
project Euler/: main.cpp
project Euler.xcodeproj/: project.pbxproj
project Euler.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
project Euler.xcodeproj/xcuserdata/stratis.xcuserdatad/xcschemes/: xcschememanagement.plist
treeTests/: treeTests.m
